k8s-specifications/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
spec:
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      imagePullSecrets:
      - name: docker-auth
      containers:
      - image: docker.io/minsiktruong/votingapp-result:latest
        imagePullPolicy: Always
        name: result
        resources:
          requests:
            cpu: 100m
            memory: 60Mi
          limits:
            cpu: 100m
            memory: 60Mi
        ports:
        - containerPort: 8081
          name: result
