k8s-specifications/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
spec:
  #replicas: 3
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      imagePullSecrets:
      - name: docker-auth
      containers:
      - image: docker.io/minsiktruong/votingapp-vote:latest
        imagePullPolicy: Always
        name: vote
        resources:
          requests:
            cpu: 1m
            memory: 50Mi
          limits:
            cpu: 500m
            memory: 150Mi
        ports:
        - containerPort: 8080
          name: vote
